--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   collection: ^1.17.0
   flutter_slidable: ^4.0.0
+  flutter_expandable_fab: ^2.5.2
 
 
 dev_dependencies:
