--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   collection: ^1.17.0
   flutter_slidable: ^4.0.0
   flutter_expandable_fab: ^2.5.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
