--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_slidable: ^4.0.0
   flutter_expandable_fab: ^2.5.2
   intl: ^0.20.2
+  carousel_slider: ^5.1.1
+  smooth_page_indicator: ^1.1.0
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
