--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  # - assets/Category/
+  assets:
+    - assets/img/
   # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
