--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   dots_indicator: ^3.0.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -73,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/logos/
   # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
